<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.taskItem.TaskEdit">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBackTaskView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:windowBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollViewUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="56dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appBarUpdate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textUpdateTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingStart="20dp"
                android:text="@string/name_text"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/taskNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/name_text"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/taskNameUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/add_name_task"
                android:maxLines="1"
                android:inputType="text" />

            <TextView
                android:id="@+id/taskDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="@string/description_text"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/taskDescUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/add_description_task"
                android:inputType="text"/>
            <TextView
                android:id="@+id/taskDateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="@string/date_title_task"
                android:textColor="#000000"
                android:textSize="15sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dateTextEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/date_pattern"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/date_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/dateTextEdit"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icon_date"
                    android:src="@drawable/ic_calendar"
                    android:backgroundTint="?android:windowBackground" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/update_task"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>