<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.taskItem.TaskView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBackHome"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:windowBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/edit_nav_menu"
            app:navigationIcon="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:background="?android:windowBackground"
            android:text="@string/add_name_task"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="112dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/description_title_task"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/description_details_task"
                android:textColor="@color/colorGrey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/taskDateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="@string/date_title_task"
                android:textColor="#000000"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/date_pattern"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toTopOf="@id/toolbarDelete" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDelete"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/delete_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>