<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <ImageView
            android:id="@+id/sampleTaskIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon_desc_card"
            app:srcCompat="@drawable/ic_assignment" />

        <TextView
            android:id="@+id/itemTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/sampleTaskIcon"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/add_name_task"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTaskName"
            android:layout_alignStart="@+id/itemTaskName"
            android:layout_marginStart="0dp"
            android:text="@string/date_title_task"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/importance_label"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_important_notflag" />

        <ImageView
            android:id="@+id/overdue_label"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_below="@id/importance_label"
            android:layout_alignStart="@id/overdue_label"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_not_overdue" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>